--- a/src/assets/styles/cmps/Loader.scss
+++ b/src/assets/styles/cmps/Loader.scss
@@ -7,8 +7,8 @@
     width: 80px;
     height: 80px;
     animation: spin 1s linear infinite;
-    position: fixed; /* Use fixed so it stays in place even when scrolling */
-    top: 45%;        /* Position from the top 50% of the viewport height */
+    position: fixed; 
+    top: 45%;        
     left: 50%;  
 }
 
